--- a/src/style/components/_title_section.scss
+++ b/src/style/components/_title_section.scss
@@ -1,14 +1,5 @@
-.title {
-
-  // @include respond-to('max-large') {
-  //   font-size: 32px;
-  // }
-
-  // @include respond-to('max-medium') {
-  //   font-size: 28px;
-  // }
-
-  // @include respond-to('max-small') {
-  //   font-size: 24px;
-  // }
+.section-title {
+  @include font ($sh-font-family, $sh-weight, $sh-size, $sh-height);
+  color: $sh-color;
+  @include fontAdaptive ($sh-height, $sh-height, $sh-height, $sh-size, 32px, 28px, 24px);
 }
