--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -16,6 +16,7 @@
   'components/use-arrow',
   'components/button-up',
   'components/sales_arrow',
+  'components/it-arrow',
   'components/finance-arrow',
   'components/main-text',
   'components/logo',
