--- a/src/style/components/_it-arrow.scss
+++ b/src/style/components/_it-arrow.scss
@@ -1,4 +1,4 @@
-.sales-arrow {
+.it-arrow {
   position: relative;
   margin-top: -1px;
   width: 0;
@@ -12,4 +12,13 @@
   }
 
   @include displayNone ('max-small');
+
+  &__button {
+    @include position (absolute, 0, 0);
+
+    @include respond-to('max-medium') {
+      @include position (absolute, 0, 0);
+    }
+  }
+
 }
