--- a/src/style/pages/_index.scss
+++ b/src/style/pages/_index.scss
@@ -5,7 +5,7 @@
 }
 
 .introduction {
-  @include size (100%, auto, 0, 10% 0 14%);
+  @include size (auto, auto, 0, 10% 0 14%);
   @include position (relative);
 
   @include respond-to('max-medium') {
@@ -129,8 +129,6 @@
 
   &__item {
 
-    @include fontAdaptive ();
-
     &:nth-child(2) {
       margin: 0 40px;
     }    
@@ -138,7 +136,7 @@
 }
 
 .sales {
-  padding: 85px 0 0;
+  background: $background-main-2;
 
   @include respond-to('max-small') {
     padding: 45px 0 0 0;
@@ -282,7 +280,8 @@
 // ! to be continued
 
 .it {
-  @include size (auto, auto, 0 0 48px 0, 45px 0 0 0);
+  @include size (100%, auto, 0 0 48px 0);
+  background: $background-main-2;
 
   &__flex-column {
     display: flex;
