--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $breakpoints: (
   'min-large': (min-width: 1080px),
 );
 
+// Положение перевернутых треугольников
 $ab: 720 / 1440 * 100vw;
 
 // Шрифт
