--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -17,6 +17,7 @@
   'components/button-up',
   'components/sales_arrow',
   'components/it-arrow',
+  'components/list-item',
   'components/finance-arrow',
   'components/main-text',
   'components/logo',
