--- a/src/components/_start.html
+++ b/src/components/_start.html
@@ -1,5 +1,5 @@
 <aside class="start">
-  <h3 class="start__title">С чего начать внедрение Lean</h3>
+  <h3 class="start__title list-title">С чего начать внедрение Lean</h3>
 
   <div class="start__body start-columns">
     <div class="start-columns__item">
