--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -18,6 +18,7 @@
   'components/sales_arrow',
   'components/it-arrow',
   'components/list-item',
+  'components/list-title',
   'components/finance-arrow',
   'components/main-text',
   'components/logo',
