--- a/src/style/components/_main-text.scss
+++ b/src/style/components/_main-text.scss
@@ -1,4 +1,4 @@
 .main-text {
   @include font ($main-font-family, $main-weight, $main-size, $main-height);
-  @include fontAdaptive ($main-f1, $main-f2, $main-f3, $main-f4);
+  @include fontAdaptive ($main-height, $main-height, $main-height, $main-f1, $main-f1, $main-f1, $main-f1);
 }
