--- a/src/style/components/_finance-arrow.scss
+++ b/src/style/components/_finance-arrow.scss
@@ -2,9 +2,14 @@
   position: relative;
   margin-top: -1px;
   width: 0;
-  border-top: 125px solid $white;
-  border-left: $ab solid transparent;
-  border-right: $ab solid transparent;
+  border-top: 125px solid rgba(240, 255, 253, 1);
+  border-left: 720px solid transparent;
+  border-right: 720px solid transparent;
+
+  @media (max-width: 1440px) {
+    border-left: (720 / 1440 * 100vw) solid transparent;
+    border-right: (720 / 1440 * 100vw) solid transparent;
+  }
 
   @include displayNone ('max-small');
 
