--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,19 +1,23 @@
 .footer {
   flex: 0 0 auto;
+  background: $background-footer;
   
   &__content {
     @include flex (row, space-between, center);
-    padding: 20px 37px 30px;
+    padding: 20px 37px 40px;
+
+    @include respond-to('max-medium') {
+      padding: 20px 37px;
+    }
 
     @include respond-to('max-small') {
       @include flex (column, space-between, flex-start);
-      padding: 20px 37px;
     }
   }
 
-  // &__logo {
-  //   @include backgroundImage (url(../assets/img/logo.png), 0 0, contain);
-  // }
+  &__logo {
+    @include backgroundImage (url(../assets/img/logo_white.png), 0 0, contain);
+  }
 
   &__logo {
     margin: 0 30px auto 0;
@@ -32,5 +36,7 @@
   }
 
   &__text {
+    @include font ($footer-font-family, $footer-weight, $footer-size, $footer-height);
+    color: $footer-color;
   }
 }
