--- a/Lean-In/css/style.css
+++ b/Lean-In/css/style.css
@@ -163,14 +163,6 @@ h6 {
   color: white;
 }
 
-.use-arrow {
-  width: 100%;
-}
-
-.use-indent {
-  padding: 0 0 70px 0;
-}
-
 .button-up {
   position: relative;
   margin: 0;
@@ -223,7 +215,6 @@ h6 {
 }
 
 .it-arrow {
-  position: relative;
   margin-top: -1px;
   width: 0;
   border-top: 125px solid white;
@@ -233,8 +224,8 @@ h6 {
 
 .it-arrow__button {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -10px;
+  left: calc((100vw / 2) - 47.5px);
   bottom: auto;
   right: auto;
 }
@@ -264,7 +255,6 @@ h6 {
 }
 
 .finance-arrow {
-  position: relative;
   margin-top: -1px;
   width: 0;
   border-top: 125px solid #f0fffd;
@@ -274,8 +264,8 @@ h6 {
 
 .finance-arrow__button {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -18px;
+  left: calc((100vw / 2) - 47.5px);
   bottom: auto;
   right: auto;
 }
@@ -455,7 +445,7 @@ h6 {
 }
 
 .content-for-start {
-  max-width: 1080px;
+  max-width: 1160px;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -464,6 +454,7 @@ h6 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
+  background: #7d9bf4;
 }
 
 .footer__content {
@@ -482,7 +473,14 @@ h6 {
           flex-direction: row;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  padding: 20px 37px 30px;
+  padding: 20px 37px 40px;
+}
+
+.footer__logo {
+  background-image: url(../assets/img/logo_white.png);
+  background-position: 0 0;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .footer__logo {
@@ -505,6 +503,14 @@ h6 {
           flex-direction: column;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+}
+
+.footer__text {
+  font-family: "PT Sans", "Arial", "Helvetica", sans-serif;
+  font-weight: regular;
+  font-size: 16px;
+  line-height: 20px;
+  color: #f2f2f2;
 }
 
 .header {
@@ -542,13 +548,12 @@ h6 {
 }
 
 .discuss {
-  padding: 0 20px;
   background: white;
 }
 
 .discuss__flex {
   margin: 0 auto;
-  padding: 40px;
+  padding: 38px 40px;
   width: 100%;
   height: auto;
   display: -webkit-box;
@@ -579,7 +584,7 @@ h6 {
 }
 
 .start {
-  padding: 40px;
+  padding: 42px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1220,12 +1225,17 @@ h6 {
 }
 
 .sales {
+  padding: 0 0 80px 0;
   background: -webkit-gradient(linear, left top, left bottom, from(#f0f6ff), to(#f0fffd));
   background: -o-linear-gradient(top, #f0f6ff 0%, #f0fffd 100%);
   background: linear-gradient(180deg, #f0f6ff 0%, #f0fffd 100%);
 }
 
 .sales__flex {
+  margin: 0 0 55px 0;
+  padding: 65px 0 0 0;
+  width: auto;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1241,7 +1251,6 @@ h6 {
           flex-direction: row;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  margin: 0 0 55px 0;
 }
 
 .sales__title {
@@ -1261,14 +1270,18 @@ h6 {
       -ms-flex: 0 0 320px;
           flex: 0 0 320px;
   background-image: url(../assets/img/lean_in_sales1.png);
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .finance {
   position: relative;
+  padding: 0 0 70px 0;
 }
 
 .finance__flex {
-  padding: 0 0 40px 0;
+  padding: 80px 0 40px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1340,49 +1353,81 @@ h6 {
 }
 
 .it {
-  margin: 0 0 48px 0;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 220px 0;
   width: 100%;
   height: auto;
+  position: relative;
   background: -webkit-gradient(linear, left top, left bottom, from(#f0f6ff), to(#f0fffd));
   background: -o-linear-gradient(top, #f0f6ff 0%, #f0fffd 100%);
   background: linear-gradient(180deg, #f0f6ff 0%, #f0fffd 100%);
 }
 
 .it__flex-column {
+  margin: 35px 0 48px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: normal;
+      -ms-flex-pack: normal;
+          justify-content: normal;
+  -webkit-box-align: normal;
+      -ms-flex-align: normal;
+          align-items: normal;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .it__link {
-  display: block;
-  text-decoration: underline;
   margin: 0 15px 8px auto;
+  display: block;
+  font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
+  font-weight: regular;
+  font-size: 18px;
+  line-height: 30px;
+  color: black;
+  text-decoration: underline;
 }
 
 .it__flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: normal;
+      -ms-flex-pack: normal;
+          justify-content: normal;
+  -webkit-box-align: normal;
+      -ms-flex-align: normal;
+          align-items: normal;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .it__body {
-  padding: 0 40px 0 0;
-}
-
-.it__body-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: normal;
+      -ms-flex-pack: normal;
+          justify-content: normal;
+  -webkit-box-align: normal;
+      -ms-flex-align: normal;
+          align-items: normal;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding: 0 40px 0 0;
 }
 
 .it__title {
@@ -1393,13 +1438,25 @@ h6 {
   margin: 0 0 35px 0;
 }
 
-.it__img-wrap {
+.it__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  margin-top: 100px;
   width: 320px;
+  height: 242px;
+  background-image: url(../assets/img/lean_in_it.png);
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.it__img {
-  width: 320px;
-  margin: 118px 0 0 0;
+.it__button-up {
+  position: absolute;
+  top: auto;
+  left: calc((100vw / 2) - 47.5px);
+  bottom: 85px;
+  right: auto;
 }
 
 .list-it__title {
@@ -1407,17 +1464,12 @@ h6 {
 }
 
 .list-it__list {
-  width: 560px;
+  max-width: 560px;
   margin: 0 auto 0 0;
 }
 
 .list-it__item {
   text-align: justify;
-  margin: 0 0 16px;
-  padding: 0 0 0 30px;
-  background-image: url(../img/list_item.svg);
-  background-position: 0 4px;
-  background-repeat: no-repeat;
 }
 
 .consultation {
@@ -1703,6 +1755,18 @@ h6 {
     max-width: 450px;
     font-size: 18px;
   }
+
+  .use {
+    padding: 118px 0 100px;
+  }
+
+  .it {
+    padding: 0 0 200px 0;
+  }
+
+  .it__button-up {
+    bottom: 55px;
+  }
 }
 
 @media (max-width: 1080px) {
@@ -1755,7 +1819,29 @@ h6 {
   }
 
   .use {
-    padding: 118px 0 115px;
+    padding: 115px 0 80px;
+  }
+
+  .it__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .it__body {
+    padding: 0;
+  }
+
+  .it__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    margin: 30px auto 0;
+  }
+
+  .list-it__list {
+    max-width: 100%;
   }
 }
 
@@ -1795,10 +1881,6 @@ h6 {
     line-height: 16px;
   }
 
-  .use-indent {
-    padding: 0 0 35px 0;
-  }
-
   .button-up {
     margin: 0;
     padding: 0;
@@ -1806,20 +1888,16 @@ h6 {
     height: 70px;
   }
 
-  .it-arrow__button {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: auto;
-    right: auto;
+  .sales-arrow {
+    border-top: 100px solid white;
   }
 
-  .finance-arrow__button {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: auto;
-    right: auto;
+  .it-arrow {
+    border-top: 100px solid white;
+  }
+
+  .finance-arrow {
+    border-top: 100px solid #f0fffd;
   }
 
   .main-text {
@@ -1904,7 +1982,7 @@ h6 {
   }
 
   .navigation__body {
-    margin: 77px 0 0 0;
+    margin: 62px 0 0 0;
     padding: 30px;
     width: 420px;
     height: 100%;
@@ -1940,7 +2018,7 @@ h6 {
   }
 
   .start-columns__title {
-    font-size: 14px;
+    margin: 27px 0 15px 0;
   }
 
   .section-title {
@@ -1952,6 +2030,10 @@ h6 {
     max-width: 100%;
   }
 
+  .footer__content {
+    padding: 20px 37px;
+  }
+
   .header {
     position: fixed;
     top: 0;
@@ -1961,8 +2043,16 @@ h6 {
     z-index: 10;
   }
 
+  .header__content {
+    padding: 20px 27px;
+  }
+
+  .start__title {
+    margin: 0 0 35px 0;
+  }
+
   .main {
-    margin: 77px 0 0 0;
+    margin: 62px 0 0 0;
   }
 
   .introduction {
@@ -1993,15 +2083,20 @@ h6 {
   }
 
   .use {
-    padding: 90px 0 90px;
+    padding: 90px 0 70px;
+  }
+
+  .sales {
+    padding: 0 0 60px 0;
   }
 
   .sales__flex {
-    padding: 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin: 0 0 35px 0;
+    padding: 45px 0 0 0;
   }
 
   .sales__title {
@@ -2014,19 +2109,57 @@ h6 {
 
   .sales__img {
     margin: 0;
+    padding: 0;
+    width: 250px;
+    height: 240px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
     -ms-flex-item-align: center;
         align-self: center;
   }
 
   .finance {
-    padding: 45px 0 20px 0;
+    padding: 0 0 35px 0;
   }
 
   .finance__flex {
+    padding: 40px 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+
+  .finance__body {
+    padding: 0;
+  }
+
+  .finance__img {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    margin: 0;
+    padding: 0;
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+  }
+
+  .it {
+    padding: 0 0 150px 0;
+  }
+
+  .it__flex-column {
+    margin: 35px 0 20px 0;
+  }
+
+  .it__img {
+    margin: 10px auto 0;
+  }
+
+  .it__button-up {
+    bottom: 45px;
   }
 }
 
@@ -2043,14 +2176,6 @@ h6 {
   .use-item__text {
     font-size: 14px;
     line-height: 16px;
-  }
-
-  .use-arrow {
-    display: none;
-  }
-
-  .use-indent {
-    padding: 0;
   }
 
   .sales-arrow {
@@ -2104,7 +2229,6 @@ h6 {
             flex-direction: column;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
-    padding: 20px 37px;
   }
 
   .footer__logo {
@@ -2115,6 +2239,15 @@ h6 {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+  }
+
+  .discuss__flex {
+    border-radius: 0;
+    background: #c6dff9;
+  }
+
+  .start {
+    border-radius: 0;
   }
 
   .introduction__title {
@@ -2136,7 +2269,8 @@ h6 {
   }
 
   .sales {
-    padding: 45px 0 0 0;
+    padding: 0 0 30px 0;
+    background: white;
   }
 
   .sales__img {
@@ -2144,11 +2278,33 @@ h6 {
   }
 
   .finance {
-    padding: 45px 0 60px 0;
+    padding: 0;
+  }
+
+  .finance__flex {
+    padding: 20px 0 40px 0;
+  }
+
+  .it__flex-column {
+    margin: 0 0 20px 0;
+    padding: 40px 0 0 0;
+  }
+
+  .it__link {
+    font-size: 14px;
+  }
+
+  .it__button-up {
+    display: none;
   }
 }
 
 @media (max-width: 425px) {
+  .main-text {
+    font-size: 16px;
+    text-align: justify;
+  }
+
   .introduction__img-1 {
     display: none;
   }
@@ -2160,6 +2316,19 @@ h6 {
   .introduction__img-3 {
     display: none;
   }
+
+  .finance__flex {
+    padding: 0 0 20px 0;
+  }
+
+  .it {
+    padding: 0;
+  }
+
+  .it__img {
+    width: 250px;
+    height: 189px;
+  }
 }
 @supports (-webkit-appearance:none){
 .button-up__part-1{background-image:url(../assets/img/svg/button_part_up.svg)}
@@ -2168,12 +2337,13 @@ h6 {
 .start-columns__img-1{background-image:url("../assets/img/training.webp")}
 .start-columns__img-2{background-image:url("../assets/img/transformation.webp")}
 .start-columns__img-3{background-image:url("../assets/img/project.webp")}
+.footer__logo{background-image:url(../assets/img/logo_white.webp)}
 .header__logo{background-image:url(../assets/img/logo.webp)}
 .ph-list__item{background-image:url(../img/dot.webp)}
 .FAQ__item{background-image:url(../img/minus.svg)}
 .sales__img{background-image:url(../assets/img/lean_in_sales1.webp)}
 .finance__img{background-image:url(../assets/img/Lean_in_finance.webp)}
-.list-it__item{background-image:url(../img/list_item.svg)}
+.it__img{background-image:url(../assets/img/lean_in_it.webp)}
 .criteria__item{background-image:url(../img/list_item.svg)}
 .works__item{background-image:url(../img/list_item.svg)}
 .team-list__item{background-image:url(../img/list_item.svg)}
