--- a/src/style/layout/_discuss.scss
+++ b/src/style/layout/_discuss.scss
@@ -1,12 +1,16 @@
 .discuss {
-  padding: 0 20px;
   background: $white;
 
   &__flex {
-    @include size (100%, auto, 0 auto, 40px);
+    @include size (100%, auto, 0 auto, 38px 40px);
     @include flex (column);
     background: $background-discuss;
     border-radius: 4px;
+
+    @include respond-to('max-small') {
+      border-radius: 0;
+      background: $middle-blue;
+    }
   }
 
   &__text {
