--- a/Lean-In/css/style.css
+++ b/Lean-In/css/style.css
@@ -4,6 +4,10 @@
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:700);
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   padding: 0;
   margin: 0;
