--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -8,13 +8,13 @@
       <nav class="navigation__body">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link" href="concept.html">Концепция</a>
+            <a class="navigation__link" href="#">Концепция</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="team.html">Команда</a>
+            <a class="navigation__link" href="#">Команда</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="contacts.html">Контакты</a>
+            <a class="navigation__link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
